[gd_scene load_steps=9 format=3 uid="uid://plj4leebtrr4"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_bmmd3"]
[ext_resource type="Texture2D" uid="uid://c1ruuyvcbm5d4" path="res://Assets/Visuals/PlaceholderCircle.png" id="2_0sp0g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5kwfq"]
radius = 9.21954

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_345lf"]
size = Vector2(20, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4iber"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2hirq"]
radius = 35.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_50y6g"]
size = Vector2(20, 5)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_5pakb"]
size = Vector2(20, 5)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_bmmd3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5kwfq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_345lf")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource("RectangleShape2D_4iber")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
visible = false
shape = SubResource("CircleShape2D_2hirq")

[node name="Sprite2D" type="Sprite2D" parent="Hurtbox"]
modulate = Color(1, 1, 1, 0.294118)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_0sp0g")

[node name="DirectionTimer" type="Timer" parent="." groups=["Enemy"]]
wait_time = 3.0
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="HPBar" type="TextureProgressBar" parent="."]
offset_left = -10.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = -15.0
max_value = 3.0
step = 0.1
value = 3.0
texture_under = SubResource("PlaceholderTexture2D_50y6g")
texture_progress = SubResource("PlaceholderTexture2D_5pakb")
tint_under = Color(1, 0, 0, 1)
tint_progress = Color(0, 1, 0, 1)

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_hurtbox_body_exited"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
